feat: product image upload

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,8 +6,8 @@ h1 {
   @apply text-blue-900 mb-2 font-bold text-xl;
 }
 
-label {
-  & span {
+form > label {
+  & > span {
     @apply text-blue-900 text-xs;
   }
 }
