--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@ h1 {
   @apply text-blue-900 mb-2 font-bold text-xl;
 }
 
-form > label {
+form > label, form > .label {
   & > span {
     @apply text-blue-900 text-xs;
   }
