--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,14 +8,14 @@ h1 {
 
 label, .label {
   & > span {
-    @apply text-blue-900 text-xs font-bold;
+    @apply text-blue-900 text-xs font-bold whitespace-nowrap;
   }
 }
 
 input,
 textarea,
 select {
-  @apply border-2 border-gray-400 rounded-md px-1 w-full;
+  @apply border-2 border-gray-400 rounded-md px-1 w-full min-h-[28px];
 
   &:focus {
     @apply border-blue-900 outline-none;
