feat: show properties in Categories Page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
+/** @format */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -21,7 +23,7 @@ select {
 }
 
 .container {
-  @apply max-w-xl mx-auto;
+  @apply max-w-2xl mx-auto;
 
   & h1 {
     @apply text-center text-2xl font-bold;
