--- a/src/app/(front)/globals.css
+++ b/src/app/(front)/globals.css
@@ -56,12 +56,17 @@ label {
   tr {
     @apply line-bottom;
   }
+  th,
+  td {
+    @apply px-2;
+  }
   th {
     @apply py-2;
   }
   td {
-    @apply px-1 py-4;
+    @apply py-4;
   }
+
   tfoot {
     tr {
       @apply border-none;
