--- a/src/app/(front)/globals.css
+++ b/src/app/(front)/globals.css
@@ -6,6 +6,14 @@
   @apply max-w-5xl mx-auto px-4;
 }
 
+.white-box {
+  @apply bg-white rounded-md p-6 mt-5;
+}
+
+h1 {
+  @apply text-4xl font-bold;
+}
+
 h2 {
   @apply text-xl font-bold;
 }
