refactor: container style moved to globals

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+._container {
+  @apply max-w-5xl mx-auto px-4;
+
+  h1 {
+    @apply text-primary text-center text-2xl font-bold;
+  }
+}
+
 .line-bottom {
   @apply border-b border-solid border-gray-200;
 }
