--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -84,3 +84,9 @@
 .btn-lg {
   @apply text-xl py-2 px-5;
 }
+
+.hide-scrollbar {
+  &:not(:hover) {
+    @apply [&::-webkit-scrollbar]:invisible;
+  }
+}
